--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,116 @@ p {
   margin: auto;
   padding: 0 0 0 5px;
 }
+
+.createFormContainer {
+  height: 400px;
+  width: 400px;
+  min-width: 250px;
+  min-height: 250px;
+  margin: 20px auto;
+}
+
+#createNoteTitle {
+  font-family: Segoe UI, Arial, sans-serif;
+  width: 100%;
+  margin: 5px 0;
+  text-align: center;
+}
+
+.createForm {
+  height: 100%;
+  width: 100%;
+  min-width: 250px;
+  min-height: 250px;
+  border: 2px solid black;
+  box-shadow: 5px 5px 7px black;
+}
+
+.createFormTitleBar {
+  height: 50px;
+  background-color: #1998dd;
+  position: relative;
+}
+
+.createFormTitleBar input {
+  font-family: Segoe UI, Arial, sans-serif;
+  width: 90%;
+  height: 60%;
+  text-align: center;
+  position: absolute;
+  margin: 0;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.createFormContentArea {
+  height: 75%;
+  width: 100%;
+  position: relative;
+  border-bottom: 1px dashed grey;
+}
+
+.createFormContentArea textarea {
+  font-family: Segoe UI, Arial, sans-serif;
+  width: 90%;
+  height: 90%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.createFormFooter {
+  height: 12.5%;
+  width: 100%;
+  position: relative;
+  text-align: center;
+}
+
+#createFormSubmitButton {
+  font-size: 28px;
+  font-family: Segoe UI, Arial, sans-serif;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+  background-color: #1998dd;
+  padding: 0 10px;
+  box-shadow: 3px 3px 3px grey;
+  margin: 5px;
+  display: inline-block;
+}
+
+#createFormSubmitButton:hover {
+  text-decoration: none;
+  background-color: ;
+  color: black;
+  box-shadow: 3px 3px 3px black;
+}
+
+#createFormCancelButton {
+  font-size: 28px;
+  font-family: Segoe UI, Arial, sans-serif;
+  font-weight: bold;
+  color: white;
+  text-decoration: none;
+  background-color: #1998dd;
+  padding: 0 10px;
+  box-shadow: 3px 3px 3px grey;
+  margin: 5px;
+  display: inline-block;
+}
+
+#createFormCancelButton:hover {
+  text-decoration: none;
+  background-color: ;
+  color: black;
+  box-shadow: 3px 3px 3px black;
+}
