--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,8 @@ p {
   border-radius: 0 0 15px 0;
   position: relative;
   width: 250px;
-  height: 250px;
+  min-height: 250px;
+  height: auto;
   box-shadow: 3px 3px 3px grey;
   margin: 30px 30px;
   display: inline-block;
@@ -101,7 +102,12 @@ p {
   color: black;
   padding: 0 5px;
   position: relative;
-  height: 180px;
+  height: auto;
+  min-height: 180px;
+}
+
+.noteContentContainer p {
+  word-wrap: break-word;
 }
 
 .noteFooterContainer {
