--- a/css/style.css
+++ b/css/style.css
@@ -131,19 +131,19 @@ p {
   width: 400px;
   min-width: 250px;
   min-height: 250px;
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -70%);
-  -moz-transform: translate(-50%, -70%);
-  -ms-transform: translate(-50%, -70%);
-  transform: translate(-50%, -70%);
+  -webkit-transform: translate(-50%, 20%);
+  -moz-transform: translate(-50%, 20%);
+  -ms-transform: translate(-50%, 20%);
+  transform: translate(-50%, 20%);
   z-index: 10;
 }
 
 .createForm {
-  height: 100%;
-  width: 100%;
+  height: 400px;
+  width: 400px;
   min-width: 250px;
   min-height: 250px;
   border: 2px solid black;
@@ -151,7 +151,7 @@ p {
 }
 
 .createFormTitleBar {
-  height: 50px;
+  height: 15%;
   background-color: #1998dd;
   position: relative;
 }
@@ -173,7 +173,7 @@ p {
 }
 
 .createFormContentArea {
-  height: 75%;
+  height: 70%;
   width: 100%;
   position: relative;
   background-color: #ecf0f1;
@@ -185,7 +185,7 @@ p {
   border: 1px solid grey;
   resize: none;
   width: 90%;
-  height: 90%;
+  height: 85%;
   margin: 0;
   position: absolute;
   top: 50%;
@@ -197,23 +197,31 @@ p {
 }
 
 .createFormFooter {
-  height: 12.5%;
+  height: 15%;
   width: 100%;
   position: relative;
   text-align: center;
   background-color: #ecf0f1;
 }
 
+.buttonContainer {
+  position: absolute;
+  left: 50%;
+}
+
 #createFormSubmitButton {
+  width: 120px;
   font-size: 28px;
   font-family: Segoe UI, Arial, sans-serif;
   font-weight: bold;
   color: white;
   text-decoration: none;
   background-color: #1998dd;
-  padding: 0 10px;
   box-shadow: 3px 3px 3px grey;
-  margin: 5px;
+  position: absolute;
+  left: 10%;
+  top: 15%;
+  margin: 0 auto;
   display: inline-block;
 }
 
@@ -225,15 +233,18 @@ p {
 }
 
 #createFormCancelButton {
+  width: 120px;
   font-size: 28px;
   font-family: Segoe UI, Arial, sans-serif;
   font-weight: bold;
   color: white;
   text-decoration: none;
   background-color: #1998dd;
-  padding: 0 10px;
   box-shadow: 3px 3px 3px grey;
-  margin: 5px;
+  position: absolute;
+  right: 0;
+  left: 60%;
+  top: 15%;
   display: inline-block;
 }
 
